[BUG #6493] Title is not centered in NavigationBar
* Fixed by positioning containers absolute and not in text float.

--- a/framework/source/resource/qx/mobile/less/basic/_masterdetail.less
+++ b/framework/source/resource/qx/mobile/less/basic/_masterdetail.less
@@ -54,10 +54,3 @@
   margin-top:11px;
 }
 
-//
-// NAVIGATION
-// 
-
-.navigation {
-  overflow:hidden;
-}
