--- a/framework/source/resource/qx/mobile/less/ios/_navigationbar.less
+++ b/framework/source/resource/qx/mobile/less/ios/_navigationbar.less
@@ -1,11 +1,18 @@
 //
 // NAVIGATIONBAR IOS
 //
+@navigationbar-height:45px;
 
 .navigationbar {
-  height: 45px;
+  height: @navigationbar-height;
   padding-left: 10px;
   padding-right: 10px;
+  position:relative;
+}
+
+.navigationbar > .label {
+  height:@navigationbar-height;
+  line-height:@navigationbar-height;
 }
 
 .navigationbar-button {
@@ -79,6 +86,30 @@
    position:relative;
 }
 
+//
+// NAVIGATION
+// 
+
+.navigation {
+  overflow:hidden;
+}
+
 .left-container > * {
   margin-right:4px;
+}
+
+@navigationbar-container-space: 5px;
+
+.left-container {
+  position:absolute;
+  left:@navigationbar-container-space;
+  top:@navigationbar-container-space;
+  width:auto;
+}
+
+.right-container {
+  position:absolute;
+  right:@navigationbar-container-space;
+  top:@navigationbar-container-space;
+  width:auto;
 }
